# RIGG

./: .gitignore  CMakeLists.txt  Evaluation.md  FutureWork.md  README  README.md  benchmark_win.cpp  examples.cpp  main.cpp  main1.cpp  main_not_so_old.cpp  main_old.cpp  output.txt
benchmark/: BaseThread.cpp  BaseThread.h  BenchmarkThread.cpp  BenchmarkThread.h  CachatRunnable.cpp  CachatRunnable.h  Event.cpp  Event.h  NaiveKleeneRunnable.cpp  NaiveKleeneRunnable.h  WorklistKleeneRunnable.cpp  WorklistKleeneRunnable.h
cachat/: AFATransition.cpp  AFATransition.h  Cachat.cpp  Cachat.h  CachatWorklist.cpp  CachatWorklist.h  Determinizer.cpp  Determinizer.h  GamePDS.cpp  GamePDS.h  GrammarDFAtoPDSAFA.cpp  GrammarDFAtoPDSAFA.h  GrammarNFAtoPDSAFA.cpp  GrammarNFAtoPDSAFA.h  Minimizer.cpp  Minimizer.h  PAFA.cpp  PAFA.h  PDSTransition.cpp  PDSTransition.h
common/: Alphabet.cpp  Alphabet.h  GameGrammar.cpp  GameGrammar.h  Letter.h  Logger.h  NFA.cpp  NFA.h  PointeeComparator.h  Printable.h  Transition.cpp  Transition.h  Types.h
cpp/: CMakeLists.txt  main_not_so_old.cpp
cpp/benchmark/: BaseThread.cpp  BaseThread.h  BenchmarkThread.cpp  BenchmarkThread.h  Event.cpp  Event.h  NaiveKleeneRunnable.h  Runnable.h
cpp/cachat/: Cachat.cpp
cpp/common/: Alphabet.cpp  Letter.h  NFA.h  PointeeComparator.h
cpp/dfa/: Formula.cpp  NaiveKleene.cpp  NaiveKleene.h
cpp/randomgen/: AlphabetGen.h  TVAutomataGen.cpp
dfa/: Box.cpp  Box.h  Clause.cpp  Clause.h  Formula.cpp  Formula.h  NaiveKleene.cpp  NaiveKleene.h  Rejecting.h  Solver.cpp  Solver.h  Ternary.h  WorklistKleene.cpp  WorklistKleene.h
randomgen/: AlphabetGen.cpp  AlphabetGen.h  TVAutomataGen.cpp  TVAutomataGen.h  TVGrammarGen.cpp  TVGrammarGen.h
src/: Benchmarking.cpp  Benchmarking.h  Examples.cpp  Examples.h  Help.cpp  Help.h  examples.cpp  main.cpp
src/common/: Alphabet.cpp  Alphabet.h  GameGrammar.cpp  GameGrammar.h  Letter.cpp  Letter.h  NFA.cpp  NFA.h  PointeeComparator.h  Printable.h  Transition.cpp  Transition.h
src/logging/: CoutLogger.h  FilteredCoutLogger.h  IndentedLogger.h  Logger.h  NullLogger.h  QuietLogger.h
src/randomgen/: AlphabetGen.cpp  AlphabetGen.h  TVAutomataGen.cpp  TVAutomataGen.h  TVGrammarGen.cpp  TVGrammarGen.h  TVLinearGrammarGen.cpp  TVLinearGrammarGen.h
src/saturation/: AFATransition.h  Cachat.cpp  Cachatifier.cpp  Cachatifier.h  Determinizer.cpp  Determinizer.h  GamePDS.cpp  GamePDS.h  Minimizer.cpp  Minimizer.h  PAFA.cpp  PAFA.h  PDSTransition.h  SaturationSolver.cpp  SaturationSolver.h
src/summaries/: Box.cpp  Box.h  Clause.cpp  Clause.h  Formula.cpp  Formula.h  FormulaStorage.h  NaiveKleene.cpp  NaiveKleene.h  SummarySolver.cpp  SummarySolver.h  Ternary.h  WorklistKleene.cpp  WorklistKleene.h
